# tailwind-css-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  forge-product.json  start_forge.bat
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/builders/: base_builder.py  cli_builder.py  legacy_builder.py  play_cdn_builder.py  postcss_builder.py  vite_builder.py
backend/app/converters/: __init__.py  play_cdn_converter.py
backend/app/core/: build_context.py  config.py
backend/app/db/: init_db.py  session.py
backend/app/detectors/: config_detector.py  css_detector.py  dependency_detector.py  framework_detector.py  html_detector.py  tailwind_detector.py  version_resolver.py
backend/app/i18n/: __init__.py  catalog.py  translator.py
backend/app/middleware/: rate_limit.py
backend/app/planners/: build_plan_factory.py
backend/app/publishers/: __init__.py  ftp_publisher.py  sftp_publisher.py
backend/app/reports/: report_generator.py
backend/app/schemas/: analysis.py  build.py  export.py  history.py  i18n.py  project.py  publish.py  settings.py  (+1 more)
backend/tailwind_css_forge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analysis.py  test_api_security.py  test_builds.py  test_frontend_hosting.py  test_installer_bundle.py  test_play_cdn_converter.py  test_process_runner.py  test_project_import.py  test_publish.py  test_publishers_security.py  test_runtime_hardening.py  test_settings_history.py  test_system_api.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+91 files in other folders)
