[package]
name = "tailwind-css-forge-desktop"
version = "0.1.0"
description = "Native desktop shell for Tailwind CSS Forge"
authors = ["Tailwind CSS Forge"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
